@@ -19,7 +19,7 @@ ECHO FATAL: XINS_HOME not set
 GOTO end
 
 :start_build
-CALL ant -f %XINS_HOME%\src\ant\make-build.xml -Dxins_home=%XINS_HOME%
+CALL ant -q -f %XINS_HOME%\src\ant\make-build.xml -Dxins_home=%XINS_HOME%
 
 IF NOT ERRORLEVEL 1 CALL ant -f build\build.xml %1 %2 %3 %4 %5 %6 %7 %8 %9
 :end
